src/apps/main/scss/_card.scss
$max_card_width: 1200px;
$max_preview_width: 480px;
$max_preview_height: 376px;
$card_title_size: 1.3rem;
$card_title_size_large: 1.8rem;

.card {
    max-width: $max_card_width;
    width: 100%;
    min-width: 300px;
    height: auto;
    background: var(--card-background);
    margin: 0 0 16px 0;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
        0 3px 1px -2px rgba(0, 0, 0, .2),
        0 1px 5px 0 rgba(0, 0, 0, .12);
    transition: all 300ms ease-in-out;
}
// Raise card when active
.card:active {
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
        0 1px 10px 0 rgba(0, 0, 0, 0.12),
        0 2px 4px -1px rgba(0, 0, 0, 0.2);
}
// .card.wrap {
//     width: inherit;
// }
// 
.card.wrap {
    width: 100%;
}

.card-title {
    // font-size: $card_title_size;
    // font-family: $title-font;
    margin: 0;
    text-align: left;
    color: var(--text-primary);
}

.card-title.noimage {
    margin-bottom: $smallgap;
}
// .card-title-padded {
//     font-size: $card_title_size;
//     padding-bottom: 16px;
// }
// .card-title-large {
//     font-size: $card_title_size_large;
// }
.card-title-area {
    padding: 12px 16px;
}
.card-title-area-raised {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 12px 16px;
    background: var(--card-header-color);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14),
        0 3px 1px -1px rgba(0, 0, 0, .2);
        // 0 2px 3px 0 rgba(0, 0, 0, .12);
}

.card-description {
    margin: 0 0 16px;
    // font-size: .9rem;
}

.card-content {
    padding: 8px 12px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    transition: padding 300ms;
    overflow-y: scroll;
}

.card-image {
    max-width: $max_card_width;
    height: 240px;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    overflow: hidden;
    transition: height 300ms;
}

.card-timestamp {
    text-align: right;
    font-size: 0.8rem;
    margin-bottom: 0;
    line-height: 1.4;
}

// A container for one or more card. The container is usually invisible
// Flex should be applied using classes from _flex.scss, but we need to
// keep this class as a selector for card animations
.card-container {
    // display: flex;
    // justify-content: center;
    align-items: stretch !important;
}

.card.preview {
    max-height: $max_preview_height;
    border-radius: 0;
}

@media screen and (min-width: $preview-width) {   
    .card.preview {
        border-radius: $corner-radius;
    }
}

@media screen and (min-width: $screen-narrow) {
    .flex-row .card {
        margin: 0 8px 16px;
        border-radius: $corner-radius;
    }
    .card {
        border-radius: $corner-radius;
    }
    .card-image {
        border-top-left-radius: $corner-radius;
        border-top-right-radius: $corner-radius;
    }
    .card-content {
        padding: 16px 16px 24px;
    }
    .card.wrap {
        width: max-content;
    }
}

@media screen and (min-width: $screen-wide) {
    .card-image {
        height: 280px;
    }
    .card-title-area-raised {
        padding: 12px 72px;
    }
    .card-content {
        padding: 24px 24px 36px;
    }
}



@media only screen and (min-width:820px) {
    .card-container {
        max-width: 672px;
        margin-left: auto;
        margin-right: auto;
    }
}

@media only screen and (min-width:1120px) {
    .card-container {
        max-width: 1030px;
    }
}

